# ChatBot

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.sh
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: chat.py  message.py  user.py
backend/app/routers/: __init__.py  auth.py  chats.py  messages.py
backend/app/schemas/: __init__.py  chat.py  message.py  user.py
backend/app/services/: __init__.py  ai.py  auth.py
backend/app/utils/: __init__.py  security.py
src/: App.tsx  index.css
src/components/auth/: LoginForm.tsx  RegisterForm.tsx
src/components/chat/: Chat.tsx  Sidebar.tsx  index.ts
src/components/chat/input/: MessageInput.tsx
src/components/chat/messages/: MessageList.tsx  ResponseMessage.tsx  UserMessage.tsx  index.ts
src/components/chat/model/: ModelSelector.tsx
src/components/markdown/: CodeBlock.tsx  MarkdownRenderer.tsx
src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Tooltip.tsx  index.ts
src/config/: api.ts
src/hooks/: useAutoScroll.ts  useChat.ts
src/services/api/: auth.ts  chats.ts  client.ts  index.ts  messages.ts  types.ts
src/store/: authStore.ts  chatStore.ts  index.ts  modelStore.ts  uiStore.ts
src/types/: chat.types.ts  index.ts  message.types.ts  model.types.ts
src/utils/: format.ts  messageTree.ts
